# web.api

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  setup.cfg
.github/workflows/: pytest.yml
test/: conftest.py  test_context.py  test_persistence.py
test/process/: test_deserialization.py  test_validation.py
web/api/: client.py  processing.py  typing.py
